--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,7 @@ cerebras:
 
 # Scanning Configuration
 scanning:
+  max_file_size: 100000  # Maximum file size to scan in bytes (100KB)
   excluded_directories:
     - "venv"
     - ".git"
